--- a/Week 2/Day 4/gallery-v1.html
+++ b/Week 2/Day 4/gallery-v1.html
@@ -10,11 +10,11 @@
       }
       body {
         display: flex;
-        height: 100vh;
+        height: 100%;
         width: 100vw;
         justify-content: center;
         align-items: center;
-        margin: 0;
+        margin: 50px 50px;
       }
       .featured {
         width: 295px;
