--- a/Week 3/Day 4/individual.html
+++ b/Week 3/Day 4/individual.html
@@ -61,13 +61,24 @@
         position: relative;
       }
 
+      .child-menu::before {
+        content: "";
+        top: -10px;
+        left: 0;
+        position: absolute;
+        display: block;
+        background: transparent;
+        width: 100%;
+        height: 10px;
+      }
+
       .child-menu {
         display: none;
         position: absolute;
         z-index: 1;
         width: max-content;
         left: 0;
-        top: calc(100% + 1px);
+        top: calc(100% + 10px);
         border: 1px solid #ebebeb;
         border-radius: 3px;
         width: 250px;
