--- a/Week 3/Day 4/individual.html
+++ b/Week 3/Day 4/individual.html
@@ -109,19 +109,7 @@
       .shape {
         width: 50px;
         height: 50px;
-        position: relative;
-        overflow: hidden;
-      }
-
-      .shifter {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        animation-name: triangle, circle, rectangle;
-        animation-duration: 2s;
-        animation-iteration-count: infinite;
+        animation: shapeit 2s linear infinite;
       }
 
       @keyframes dropdown {
@@ -150,27 +138,21 @@
         }
       }
 
-      @keyframes triangle {
-        25% {
-          background-color: #2196f3;
-          transform-origin: left bottom;
-          transform: rotate(45deg);
-        }
-      }
-
-      @keyframes circle {
-        50% {
-          transform-origin: left bottom;
-          background-color: #f44336;
-          transform: rotate(90deg);
-          border-radius: 50%;
-        }
-      }
-
-      @keyframes rectangle {
-        100% {
-          transform-origin: left bottom;
+      @keyframes shapeit {
+        0% {
           background-color: #4caf50;
+          transform: rotate(0deg);
+          clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+        }
+        33% {
+          background-color: #2196f3;
+          transform: rotate(45deg);
+          clip-path: polygon(50% 0, 0 100%, 100% 100%);
+        }
+        66% {
+          clip-path: circle(50% at 50% 50%);
+          background-color: #f44336;
+          transform: rotate(40deg);
         }
       }
     </style>
@@ -200,9 +182,7 @@
     </header>
     <main>
       <img class="spinner" src="./assets/Spinner.svg" alt="spinner" />
-      <div class="shape">
-        <div class="shifter"></div>
-      </div>
+      <div class="shape"></div>
     </main>
   </body>
 </html>
